tests/snapshots/cli__install_no_plugins_downgrades_the_refusal_to_a_warning.snap
---
source: tests/cli.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----
install 1 / keep 0 / remove 0
  install acme/mystery-plugin (1.0.0)

----- stderr -----
The "acme/mystery-plugin" plugin was not loaded as plugins are disabled.
