tests/snapshots/cli__install_offline_reports_every_missing_package_in_one_message.snap
---
source: tests/cli.rs
assertion_line: 165
expression: snapshot
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Normalized [PROJECT]/composer.json
Network disabled, request canceled: not in the store (3 packages):
  monolog/monolog (3.11.0)
  psr/log (3.0.2)
  psr/container (2.0.2)
