tests/snapshots/cli__install_refuses_an_unknown_enabled_composer_plugin.snap
---
source: tests/cli.rs
expression: snapshot
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
viv cannot run the Composer plugin `acme/mystery-plugin`.
Pass --no-plugins to install without it, as Composer would. No adapter exists for it yet, so the work the plugin would have done is skipped. Check what it writes before you rely on the result. (see docs/plugin-strategy.md, "Data file or adapter")
See docs/plugin-strategy.md.
