tests/snapshots/cli__install_warns_when_the_lock_is_stale.snap
---
source: tests/cli.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----
install 3 / keep 0 / remove 0
  install monolog/monolog (3.11.0)
  install psr/log (3.0.2)
  install psr/container (2.0.2)

----- stderr -----
Warning: The lock file is not up to date with the latest changes in composer.json. You may be getting outdated dependencies. It is recommended that you run `viv update` or `viv update <package name>`.
