tests/snapshots/cli__install_without_a_lock_fails.snap
---
source: tests/cli.rs
expression: snapshot
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
composer.lock not found; viv installs from an existing composer.lock, run `viv update` to create one
