tests/snapshots/cli__install_without_a_lock_or_composer_json_fails.snap
---
source: tests/cli.rs
expression: snapshot
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Composer could not find a composer.json file in [PROJECT]
