tests/snapshots/cli__rm_names_a_package_that_is_not_required.snap
---
source: tests/cli.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
not/installed is not required in your composer.json and has not been removed
