tests/snapshots/cli__rm_removes_a_required_package.snap
---
source: tests/cli.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
