tests/snapshots/cli__run_list_with_no_scripts_says_so.snap
---
source: tests/cli.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----
No scripts declared in composer.json

----- stderr -----
