tests/snapshots/cli__run_without_a_script_or_list_errors_naming_it.snap
---
source: tests/cli.rs
expression: snapshot
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <COMMAND>...

Usage: viv run <COMMAND>...

For more information, try '--help'.
