tests/snapshots/cli__update_is_not_implemented.snap
---
source: tests/cli.rs
expression: snapshot
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
viv update is not implemented in vivace v0.1: use composer update
