tests/snapshots/cli__update_lock_accepts_install_only_flags.snap
---
source: tests/cli.rs
assertion_line: 395
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
